--- a/blog.css
+++ b/blog.css
@@ -10,18 +10,25 @@ body {
 }
 
 h1{
-    font-size: 4em;
+    font-size: 3.3em;
     margin: 0;
 }
 
 p{
-    line-height: 1em;
+    line-height: 1.2em;
 }
 
 #blog {
-    border-top: 1px black;
+    border-top: 2px solid black;
+    color: black;
+    padding: 5px;
 }
 
 .Post {
-    border-bottom: 1px black;
+    border-bottom: 1px solid black;
 }
+
+img{
+  width: 40%
+}
+
