--- a/style.css
+++ b/style.css
@@ -42,13 +42,13 @@ img {
     font-weight: 500;
 }
 
-.bailey {
-    float: right;
-    margin-right: 0 15px 15px 0;
-    width: 300px;
+.picture-and-content {
+    margin: 150px auto;
+    width: 50%;
+    padding: 8px;
 }
 
-.picture-and-content {
-    max-width: 800px;
-    margin: auto;
+.baileyd {
+    float: left;
+    padding: 0 10px 0 0;
 }
