--- a/style.css
+++ b/style.css
@@ -30,7 +30,8 @@ p{
 
 img {
     float: left;
-    width: 20%;
+    width: 40%;
+    height: 310px;
 }
 
 .author {
@@ -44,7 +45,7 @@ img {
 }
 
 .picture-and-content {
-    margin: 150px auto;
+    margin: 0;
     width: 50%;
     padding: 8px;
 }
