--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ p{
 }
 
 img {
-    float: left;
+    float: right;
     width: 40%;
     height: 310px;
 }
@@ -45,8 +45,8 @@ img {
 }
 
 .picture-and-content {
-    margin: 0;
-    width: 50%;
-    padding: 8px;
+    width: 800px;
+    margin: 8px;
+    padding-right: 50px;
 }
 
