--- a/style.css
+++ b/style.css
@@ -30,9 +30,9 @@ p{
 
 img {
     float: right;
-    width: 20%;
-    height: 20%;
-    padding-right: 200px;
+    width: 100px;
+    height: 100px;
+    padding-right: 400;
 }
 
 .author {
