--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ img {
     float: right;
     width: 100px;
     height: 100px;
-    padding-right: 400;
+    padding-right: 400px;
 }
 
 .author {
