--- a/style.css
+++ b/style.css
@@ -30,8 +30,8 @@ p{
 
 img {
     float: right;
-    width: 100px;
-    height: 100px;
+    width: 10%;
+    height: 10%;
     padding-right: 400px;
 }
 
